# Structure2Schematic

./: Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: build-cli.yml  ci.yml  deploy.yml  release.yml
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.svelte  main.ts
frontend/src/lib/: Converter.svelte  firebase.ts
s2s_cli/: Cargo.toml
s2s_core/: Cargo.toml
s2s_core/src/: lib.rs
s2s_core/src/formats/: mod.rs  schematic.rs  structure.rs
s2s_web/: Cargo.toml
s2s_web/src/: lib.rs
