[package]
name = "s2s_web"
version = "0.1.0"
authors = ["Chaos <max@chaoscaot.de>"]
edition = "2018"
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.74"
web-sys = { version = "0.3.72", features = ["File", "FileReader", "FileReaderSync"]  }
s2s_core = { path = "../s2s_core" }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = "s"
